--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "globals": "^16.5.0",
     "vite": "^7.2.4"
   },
-  "homepage": "https://github.com/RockThePeople/rockthepeople.github-io"
+  "homepage": "https://github.com/RockThePeople/rockthepeople.github.io"
 }
